# marimo-template

./: .gitignore  LICENSE  README.md  marimo.toml  pyproject.toml
.github/workflows/: deploy.yml
apps/: fibonacci.py
scripts/: build.py
src/: app.py
