[project]
description = "A starter template for python projects using marimo notebooks and uv as package manager"
name = "marimo-template"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "marimo>=0.11.21",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "ruff>=0.8.3",
]

